--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: sit_docker_deployment
 
 on:
+  #通过提交到主分支进行触发工作流
   push:
     branches: [main]
   workflow_dispatch:
@@ -9,5 +10,18 @@ jobs:
   DeploymentProject:
     runs-on: ubuntu-latest
     steps:
+      #工作流开始
       - name: workflow start
         run: echo "workflow start"
+      
+      - uses: actions/checkout@v3
+
+      #登录到dockerhub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_KEY }}
+        run: echo "login success"
+
+      
